# QuickJob

./: CMakeLists.txt  Main.qml  account.qml  add.qml  chat.qml  favorite.qml  main.cpp
